--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=14
-_lqx=lqx2
+_minor=15
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.14.lqx2.r0.g2627af104678
+pkgver=5.5.15.lqx1.r0.g472c6fbdc0a6
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -306,4 +306,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'b3a4a55b14b9f5c52b275807ea550f1f49f527c62a7593adacad4941874976e66b014ff0b9db759c3d6976c7304107a3ce0ec6542605a25a7239192d8f4c3125')
+            '4ea6c142254c3cd7496d17453686d50d483f971a00523ee4b1d61b39d84b10ca3338f70bde01a1b01b4e8538d75fe81fb2dc6f791b857c0a77980a01a4ce76e3')
