--- a/linux-zen-rebranded/linux-zen-tag/PKGBUILD
+++ b/linux-zen-rebranded/linux-zen-tag/PKGBUILD
@@ -45,13 +45,11 @@ _use_current=
 pkgbase=linux-zen-tag
 # pkgname=('linux-zen-tag' 'linux-zen-tag-headers' 'linux-zen-tag-docs')
 _major=5.6
-_minor=0
-_zen=zen2
+_minor=2
+_zen=zen1
 _srcname=linux-${_major}
-#pkgver=${_major}.${_minor}.${_zen}
-#_pkgver=${_major}.${_minor}-${_zen}
-pkgver=${_major}.${_zen}
-_pkgver=${_major}-${_zen}
+pkgver=${_major}.${_minor}.${_zen}
+_pkgver=${_major}.${_minor}-${_zen}
 pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
@@ -303,7 +301,7 @@ done
 
 sha512sums=('80846fe2b4e4a7ff471d2dde28a8216ae807a3209f959e93d39ea4fc9a189ea28ec3db9d303b3fe15a28c2cb90e7446876678e93e23353c2d6f262e364a06bc9'
             'SKIP'
-            '880078a3baf0c02fd47ecfabb80244f310f06edda2de2c3e0b9183302e99b7868fdecf6efc7e01d6c7158dfb2db3f0f553d1860216dd6d725fedcf30bfe8599f'
+            '80e261406743eb17e3f58e09c22114733816a0e9f1748fc145c120c52882b484c3f1c1ba675044b793af9c6c4538b24d3319d31249fd1befbe0413a2f40675f9'
             'SKIP'
             '6f1df2196542bc7f79a02b159b08e921e484ccec3aa1bfc0a513b24042296d1aed24ebe2ef9234c74a275507580339eb296790b03f9660b135c06699a07e9626')
 
