--- a/dots/boot/syslinux.cfg
+++ b/dots/boot/syslinux.cfg
@@ -67,37 +67,37 @@ LABEL arch_linux
     MENU LABEL Arch Linux
     LINUX ../vmlinuz-linux
     INITRD ../intel-ucode.img,../initramfs-linux.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012'
 
 LABEL arch_linux_fallback
     MENU LABEL Arch Linux Fallback
     LINUX ../vmlinuz-linux
     INITRD ../intel-ucode.img,../initramfs-linux-fallback.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012'
 
 LABEL arch_linux_lucjan
     MENU LABEL Arch Linux LL 
     LINUX ../vmlinuz-linux-lucjan
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012'
     
 LABEL arch_linux_lucjan_fallback
     MENU LABEL Arch Linux LL Fallback
     LINUX ../vmlinuz-linux-lucjan
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-fallback.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo 
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012'
 
 LABEL arch_linux_lucjan_git
     MENU LABEL Arch Linux LL Git 
     LINUX ../vmlinuz-linux-lucjan-git
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012'
 
 LABEL arch_linux_lucjan_git_fallback
     MENU LABEL Arch Linux LL Git Fallback
     LINUX ../vmlinuz-linux-lucjan-git
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git-fallback.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012'
     
 LABEL hdt
         MENU LABEL HDT (Hardware Detection Tool)
