--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
 _minor=16
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.5.16.lqx1.r0.gd70d8a1550aa
+pkgver=5.5.16.lqx2.r0.gc3fd9c0017fe
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
