--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=18
+_minor=19
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.18.lqx1.r0.ga285526a40e3
+pkgver=5.5.19.lqx1.r0.g08c67e810c8e
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
