--- a/linux-5.7rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.7rc/linux-bfq-git/PKGBUILD
@@ -50,8 +50,8 @@ pkgbase=linux-bfq-git
 _major=5.7
 _major_rc=5.7-rc
 _srcname=linux
-pkgver=5.7.rc2.r0.gae83d0b416db
-pkgrel=2
+pkgver=5.7.rc2.r118.gb4f633221f0a
+pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -68,7 +68,7 @@ _bfq_rev_path="bfq-reverts-all"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200330"
+_bfq_rel="r2K200424"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
@@ -327,7 +327,7 @@ done
 
 sha512sums=('SKIP'
             'f1f73cfe67a3a03b214af8b8cdc48d4491fd46e7e574f2ecfeaf360e57e158e0fcc1c7bd6b2f9dd86c4c8f7d3044b84dbb67deb0fdaf587b53befbf20128a15a'
-            '86886f856999427c08d8edb28e4093125a90aa86239f16c5e2f0679cd07a0795efcf83ec5fabcb681e77b61ed96a10fc593e2f116790defb679295eb329b9ac7'
+            'edd24a5c9eaf33e2e19f7c2235d28fbc1167482bb578802f07fde498d159c2c1ce64b3280b1211aa987e6cb095d786b290eeaf9fb3db7fc62b31e91a5021cc0c'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
             '8eda2e01d9b198d67c789b0a8d685f020a9dc30744bcb3f99f88363bab93a695d06c0a4c7b72ab69dd878eadbaa274773b24780b5d403b1aa384f38ff822811b'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
