--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -44,11 +44,11 @@ _use_current=
 
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
-_major=5.5
-_minor=19
+_major=5.6
+_minor=7
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.19.lqx1.r0.g08c67e810c8e
+pkgver=5.6.7.lqx1.r0.gfd3b7cc38104
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -173,6 +173,7 @@ _package() {
     optdepends=('crda: to set the correct wireless channels of your country'
                 'linux-firmware: firmware images needed for some devices'
                 'modprobed-db: Keeps track of EVERY kernel module that has ever been probed - useful for those of us who make localmodconfig')
+    provides=(VIRTUALBOX-GUEST-MODULES WIREGUARD-MODULE)
 
   cd $_srcname
   local kernver="$(<version)"
@@ -191,9 +192,6 @@ _package() {
 
   # remove build and source links
   rm "$modulesdir"/{source,build}
-
-  echo "Fixing permissions..."
-  chmod -Rc u=rwX,go=rX "$pkgdir"
 }
 
 _package-headers() {
@@ -270,9 +268,6 @@ _package-headers() {
   echo "Adding symlink..."
   mkdir -p "$pkgdir/usr/src"
   ln -sr "$builddir" "$pkgdir/usr/src/$pkgbase"
-
-  echo "Fixing permissions..."
-  chmod -Rc u=rwX,go=rX "$pkgdir"
 }
 
 _package-docs() {
@@ -293,9 +288,6 @@ _package-docs() {
   echo "Adding symlink..."
   mkdir -p "$pkgdir/usr/share/doc"
   ln -sr "$builddir/Documentation" "$pkgdir/usr/share/doc/$pkgbase"
-
-  echo "Fixing permissions..."
-  chmod -Rc u=rwX,go=rX "$pkgdir"
 }
 
 pkgname=("$pkgbase" "$pkgbase-headers" "$pkgbase-docs")
@@ -308,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '41584264881c10dfcb1cab7c834339c6ba498ca1b3c9165b9e07a7690fba9e8ee2e50416153db1b0b8af6eb1ff1cd4e49dc5923652e111269ac65317397b344c')
+            '3bde1ce0c8101a053509ff22bc15fb94fc19617056d8304a3392fa3ba418eaae5db327632fcf13cd61b2a38d23f5e42a7db9c2b1b01f90a6f6bcd9d966e169a0')
