--- a/linux-5.7rc/linux-uksm-git/PKGBUILD
+++ b/linux-5.7rc/linux-uksm-git/PKGBUILD
@@ -50,8 +50,8 @@ pkgbase=linux-uksm-git
 _major=5.7
 _major_rc=5.7-rc
 _srcname=linux
-pkgver=5.7.rc2.r0.gae83d0b416db
-pkgrel=2
+pkgver=5.7.rc3.r0.g6a8b55ed4056
+pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -65,8 +65,8 @@ _uksm_path="uksm-patches"
 #_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master/v5.x"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="0001-UKSM-for-${_major}.patch"
-_gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
-_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
+_gcc_path="https://raw.githubusercontent.com/sirlucjan/kernel_gcc_patch/master"
+_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.7+.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
@@ -321,7 +321,7 @@ done
 
 sha512sums=('SKIP'
             '8c7489d3ca1a8c90d8c54da4eb5d8ff871ebe3ffb0731b05a4f4c050d03f7733434c31db2f00f71902774b46960b641a8b7aeaa1886a67e9244d94422d95a7e1'
-            '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
+            '805fb57b185c0394dcba668bb38a3ed3763bb87bb390fdf2a5b41cc176cae071652cf9b398ae8ae92178b5b8569434dc39c15cb2013f57bd68d37f292c775a7c'
             '8eda2e01d9b198d67c789b0a8d685f020a9dc30744bcb3f99f88363bab93a695d06c0a4c7b72ab69dd878eadbaa274773b24780b5d403b1aa384f38ff822811b'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
             'b14b1b66d49c119bc64d53350a57bc2285098533304be2215927bd4b072763717451219e408e01d33c762b49a07d765c854782301d411fbf2e14ea1498cfc926')
