--- a/linux-lqx-rebranded/linux-lqx-tag/config
+++ b/linux-lqx-rebranded/linux-lqx-tag/config
@@ -2179,7 +2179,8 @@ CONFIG_DMA_SHARED_BUFFER=y
 #
 # end of Bus devices
 
-CONFIG_CONNECTOR=m
+CONFIG_CONNECTOR=y
+CONFIG_PROC_EVENTS=y
 CONFIG_GNSS=m
 CONFIG_GNSS_SERIAL=m
 CONFIG_GNSS_MTK_SERIAL=m
