--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.6
-_minor=7
+_minor=8
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.6.7.lqx1.r0.gfd3b7cc38104
+pkgver=5.6.8.lqx1.r0.g0b87c7f789b0
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -300,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '3bde1ce0c8101a053509ff22bc15fb94fc19617056d8304a3392fa3ba418eaae5db327632fcf13cd61b2a38d23f5e42a7db9c2b1b01f90a6f6bcd9d966e169a0')
+            '1763724c25b5799c0f514e50c1e9d6135c5e598352be09b32ae39407474551cece90e07c039924fdd2ebbe621dbad8d73bb581ff3c06d1e6a050e66424275df7')
