--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.6
-_minor=11
-_lqx=lqx3
+_minor=12
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.6.11.lqx3.r0.gce38a997e96a
+pkgver=5.6.12.lqx1.r0.g70c309f5b1f9
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -300,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            'cc837fe2e35c6251785721a7dd0f958892978efd9d9d815cca1d1f723fca75105ce7d854db1764b9c86624566453ff790131696be844356e1ec707795fc6cb48')
+            'ebff2b863788e7e60f6bcd7868b03ff8234cc2afe1c47db40b15b77edad47adc8c103361a0f1c5e4f78ced8c7061a436703b50f398b364bc327ce99e905d74f3')
