--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.6
-_minor=12
-_lqx=lqx2
+_minor=13
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.6.12.lqx2.r0.gbdb08e4c9c34
+pkgver=5.6.13.lqx1.r0.gfa9263bedf84
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -300,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            'ebff2b863788e7e60f6bcd7868b03ff8234cc2afe1c47db40b15b77edad47adc8c103361a0f1c5e4f78ced8c7061a436703b50f398b364bc327ce99e905d74f3')
+            'd5cc16b61e303b6182b8dca21908125ad4f77ef681a9c3589914a859c989862a17a4f18d4f6c3966ed82d42ec4f44b172447d32402b1cd0e4d4137bff4de782a')
