--- a/linux-5.7rc/linux-uksm/config
+++ b/linux-5.7rc/linux-uksm/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.6.8-arch1 Kernel Configuration
+# Linux/x86 5.6.13-arch1 Kernel Configuration
 #
 
 #
@@ -385,6 +385,8 @@ CONFIG_ACRN_GUEST=y
 # CONFIG_MCANNONLAKE is not set
 # CONFIG_MICELAKE is not set
 # CONFIG_MCASCADELAKE is not set
+# CONFIG_MCOOPERLAKE is not set
+# CONFIG_MTIGERLAKE is not set
 CONFIG_GENERIC_CPU=y
 # CONFIG_MNATIVE is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
