--- a/linux-5.7rc/linux-uksm-git/PKGBUILD
+++ b/linux-5.7rc/linux-uksm-git/PKGBUILD
@@ -51,7 +51,7 @@ _major=5.7
 _major_rc=5.7-rc
 _srcname=linux
 pkgver=5.7.rc6.r0.gb9bbe6ed63b2
-pkgrel=1
+pkgrel=2
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -65,12 +65,12 @@ _uksm_path="uksm-patches"
 #_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master/v5.x"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="0001-UKSM-for-${_major}.patch"
-_gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
-_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v10.1+_kernel_v5.7+.patch"
+_gcc_path="cpu-patches-v3-sep"
+_gcc_patch="0001-cpu-5.7-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
-        "${_gcc_path}/${_gcc_patch}"
+        "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
         "${_lucjanpath}/arch-patches/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
         'sphinx-workaround.patch'
          # the main kernel config files
@@ -321,7 +321,7 @@ done
 
 sha512sums=('SKIP'
             '8c7489d3ca1a8c90d8c54da4eb5d8ff871ebe3ffb0731b05a4f4c050d03f7733434c31db2f00f71902774b46960b641a8b7aeaa1886a67e9244d94422d95a7e1'
-            '509cddc74347c29d14a28156b491acd3ee9307eff0b19eddb9d38503871464fb26ee2406490092d9d5b53a88cf1f9788f10b63c67d25fa319f5a0d242875e3e1'
+            'b64e4d18572ba0b17f38ca1a1ae01b2f95690c6149a270a9c74adf8a891c480a50c21bb326508dc75bae07e2120472d18d7d33355d28cb6dc21c4e03b548e42e'
             '8eda2e01d9b198d67c789b0a8d685f020a9dc30744bcb3f99f88363bab93a695d06c0a4c7b72ab69dd878eadbaa274773b24780b5d403b1aa384f38ff822811b'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
             'ca38d6a0f89666a8cff5933ea01d970c570b1af02ef02592852dc7a0d11ae75ed1ca7ad3cbb04133238b4b14f71de8a322d8922ff7d824dbe8c85c17bc72444a')
