--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -46,7 +46,7 @@ pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
 _major=5.6
 _srcname=zen-kernel
-pkgver=5.6.8.r903454.ge7aa09ceebee
+pkgver=5.6.13.r903864.g3ff062804968
 pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
@@ -299,4 +299,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '532295c552f7871806387b2d1ba74d4e16b1e707bf2d068fff4ed07685237ae12b38fe2257c56acefbe0b118684838bf2adf3aedf71b3c2d8c33d2127beda89a')
+            '48a009ed37196716080b378d0c44ce7bb494472a89984bae98bdbe0f3fea0b815d4a38257d787e602abfa2e3b4d33d7384e96e874c9e04a2494ee48ae58fa305')
